--- a/actions/setup/action.yaml
+++ b/actions/setup/action.yaml
@@ -2,12 +2,6 @@ name: "Setup npm"
 description: "Setup npm environment"
 author: "johan.enell@qlik.com"
 
-inputs:
-  cache:
-    description: "Used to specify a package manager for caching in the default directory. Supported values: npm, yarn, pnpm."
-    required: false
-    default: "yarn"
-
 runs:
   using: composite
 
@@ -20,5 +14,9 @@ runs:
     - name: Setup Node
       uses: actions/setup-node@v3
       with:
-        node-version: "18"
-        cache: ${{ inputs.cache }}
+        node-version: 18
+        cache: yarn
+
+    - name: Install dependencies
+      shell: bash
+      run: yarn install --immutable
