--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,13 +1,19 @@
-name: Build
+name: Build & Release
+
 on:
   workflow_call:
+    inputs:
+      release:
+        required: true
+        type: boolean
 
 jobs:
   checks:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: qlik-oss/sn-gh-workflows/actions/setup@v1
+    - name: Setup workspace
+      uses: qlik-oss/sn-gh-workflows/actions/setup@v1
 
     - name: ESLint
       run: yarn lint
@@ -33,4 +39,7 @@ jobs:
     - name: Build
       run: yarn build
 
-    - uses: qlik-oss/sn-gh-workflows/actions/release@v1
+    - name: Release
+      uses: qlik-oss/sn-gh-workflows/actions/release@v1
+      with:
+        release: ${{ inputs.release }}
