--- a/.github/workflows/code-coverage-baseline.yaml
+++ b/.github/workflows/code-coverage-baseline.yaml
@@ -9,13 +9,6 @@ jobs:
     steps:
     - uses: qlik-oss/sn-gh-workflows/actions/setup@v1
 
-    - name: Cache baseline code coverage
-      id: cache
-      uses: actions/cache@v3
-      with:
-        path: report-baseline.json
-        key: baseline-coverage
-
     - name: 'Test'
       uses: ArtiomTr/jest-coverage-report-action@v2
       with:
@@ -24,3 +17,10 @@ jobs:
 
     - name: Store main code coverage
       run: cat report.json > report-baseline.json
+
+    - name: Cache baseline code coverage
+      id: cache
+      uses: actions/cache/save@v3
+      with:
+        path: report-baseline.json
+        key: baseline-coverage
