--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -30,7 +30,8 @@ jobs:
       uses: actions/cache/restore@v3
       with:
         path: report-baseline.json
-        key: baseline-coverage
+        key: baseline-coverage-${{ github.sha }}
+        restore-keys: baseline-coverage-
 
     - name: 'Test'
       if: steps.baseline-code-coverage.outputs.cache-hit == 'true'
