--- a/actions/setup/action.yaml
+++ b/actions/setup/action.yaml
@@ -4,7 +4,7 @@ author: "johan.enell@qlik.com"
 
 inputs:
   GH_ACCESS_TOKEN:
-    description: 'Token for accessing private repos'
+    description: "Token for accessing private repos"
     required: false
 
 runs:
@@ -29,6 +29,12 @@ runs:
         npm set @qlik-trial:registry https://npm.pkg.github.com/
         npm set "//npm.pkg.github.com/:_authToken=${{ inputs.GH_ACCESS_TOKEN }}"
 
+    - name: Authenticate with nebula npm package
+      shell: bash
+      run: |
+        set -eo pipefail
+        # Amend auth token for access to public npm registry for @nebula.js packages
+        echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
     - name: Install dependencies
       shell: bash
       run: yarn install --immutable
