--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -6,7 +6,7 @@ on:
       release:
         required: true
         type: boolean
-      branches:
+      release_branches:
         required: false
         type: string
 
@@ -52,7 +52,7 @@ jobs:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         with:
           dry_run: ${{ !inputs.release }}
-          branches: ${{ inputs.branches }}
+          branches: ${{ inputs.release_branches }}
 
       - name: Upload extension artifact
         uses: actions/upload-artifact@v3
