feat: added format:check
BREAKING CHANGE: forma:check is now required to succeed with build

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -28,6 +28,9 @@ jobs:
       - name: ESLint
         run: yarn lint
 
+      - name: Prettier
+        run: yarn format:check
+
       - name: Typescript
         run: yarn tsc --noEmit
 
