--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -32,7 +32,7 @@ jobs:
         run: yarn format:check
 
       - name: Typescript
-        run: yarn tsc --noEmit
+        run: yarn types:check
 
       - name: Run unit tests
         uses: paambaati/codeclimate-action@v4.0.0
