--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -20,7 +20,7 @@ jobs:
 
     steps:
       - name: Setup workspace
-        uses: qlik-oss/sn-gh-workflows/actions/setup@v1.4.0
+        uses: qlik-oss/sn-gh-workflows/actions/setup@v1
         with:
           GH_ACCESS_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
@@ -65,6 +65,10 @@ jobs:
       - name: Build
         if: contains(fromJSON(steps.package.outputs.result), 'build' )
         run: yarn build
+
+      - name: Run Playwright tests
+        if: contains(fromJSON(steps.package.outputs.result), 'test:e2e' )
+        run: yarn test:e2e
 
       - name: Build ext
         if: contains(fromJSON(steps.package.outputs.result), 'sense')
