--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -68,7 +68,9 @@ jobs:
 
       - name: Run Playwright tests
         if: contains(fromJSON(steps.package.outputs.result), 'test:e2e' )
-        run: yarn test:e2e
+        run: |
+          npx playwright install
+          yarn test:e2e
 
       - name: Build ext
         if: contains(fromJSON(steps.package.outputs.result), 'sense')
