--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -72,6 +72,13 @@ jobs:
           npx playwright install
           yarn test:e2e
 
+      - name: Upload results Playwright tests
+        if: contains(fromJSON(steps.package.outputs.result), 'test:e2e' )
+        uses: actions/upload-artifact@v3
+        with:
+          name: playwright-report
+          path: ./test/rendering/test-report
+
       - name: Build ext
         if: contains(fromJSON(steps.package.outputs.result), 'sense')
         run: yarn sense
