feat: added spec script

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -53,6 +53,18 @@ jobs:
         if: contains(fromJSON(steps.package.outputs.result), 'types:check')
         run: yarn types:check
 
+      - name: API Spec
+        if: contains(fromJSON(steps.package.outputs.result), 'spec')
+        run: |
+          yarn spec
+          # Fail if the spec command changed any files
+          if [[ -z "$(git status --porcelain)" ]];
+          then
+            exit 0
+          else
+            exit 1
+          fi
+
       - name: Run unit tests
         uses: paambaati/codeclimate-action@v4.0.0
         if: contains(fromJSON(steps.package.outputs.result), 'test:unit')
@@ -99,3 +111,7 @@ jobs:
         with:
           dry_run: ${{ !inputs.release }}
           branches: ${{ inputs.release_branches }}
+
+      # - name: API Governence
+      #   if: success() && inputs.release
+      #   run:
