--- a/actions/setup/action.yaml
+++ b/actions/setup/action.yaml
@@ -21,6 +21,7 @@ runs:
       uses: actions/checkout@v3
       with:
         fetch-depth: 0
+        persist-credentials: false
 
     - name: Setup Node
       uses: actions/setup-node@v3
