fix: add forzen lockfile to be compatible with classic yarn

--- a/actions/setup/action.yaml
+++ b/actions/setup/action.yaml
@@ -57,4 +57,4 @@ runs:
 
     - name: Install dependencies
       shell: bash
-      run: yarn install --immutable
+      run: yarn install --immutable --frozen-lockfile
