--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,19 +1,20 @@
-name: Build
+name: Test workflow
 on:
   workflow_dispatch:
-
   push:
     branches:
       - main
-
   pull_request:
-    branches:
-      - main
 
 jobs:
-  build:
+  test:
+    strategy:
+      matrix:
+        manager: [yarn, pnpm, bun, npm]
+    name: ${{ matrix.manager }}
     uses: ./.github/workflows/build.yaml
     secrets: inherit
     with:
+      package_manager: ${{ matrix.manager }}
       release: false
       api_specification_path: api-spec/spec.json
