fix: add plugin to list

--- a/actions/semantic-release-monorepo/action.yaml
+++ b/actions/semantic-release-monorepo/action.yaml
@@ -37,3 +37,4 @@ runs:
         extra_plugins: |
           @semantic-release/exec
           @semantic-release/git
+          semantic-release-lerna
