--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -137,4 +137,4 @@ jobs:
 
       - name: Release monorepo
         if: ${{ inputs.monorepo }}
-        run: lerna publish from-package -y
+        run: $ yarn workspaces run semantic-release -e semantic-release-monorepo --branches ${{ inputs.release_branches }}
