--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -135,8 +135,14 @@ jobs:
           release: ${{ inputs.release }}
           release_branches: ${{ inputs.release_branches }}
 
+      - name: git config
+        if: ${{ inputs.customRelease }}
+        run: |
+          git config user.name "${GITHUB_ACTOR}"
+          git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
       - name: Release monorepo
         if: ${{ inputs.customRelease }}
         env:
           GH_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: yarn release
